--- a/CSIS247Project/res/layout/createevent.xml
+++ b/CSIS247Project/res/layout/createevent.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout_Create_Event"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical" >
@@ -54,11 +59,18 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="time" />
-
+    
     <Button
+        android:id="@+id/button_picture_event_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Browse_Picture_Button" />
+    
+     <Button
         android:id="@+id/button_submit_event_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Submit_Button" />
 
 </LinearLayout>
+</ScrollView>
