--- a/CSIS247Project/res/layout/createevent.xml
+++ b/CSIS247Project/res/layout/createevent.xml
@@ -6,7 +6,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/LinearLayout_Create_Event"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical" >
 
     <TextView
@@ -25,49 +25,70 @@
     </EditText>
 
     <TextView
-        android:id="@+id/Text_Event_Description"
+        android:id="@+id/Text_Create_Event_Description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Create_Event_Description" />
 
     <EditText
-        android:id="@+id/Edit_Event_Description"
+        android:id="@+id/Edit_Create_Event_Description"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine" />
 
     <TextView
-        android:id="@+id/Text_Event_Address"
+        android:id="@+id/Text_Create_Event_Address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Create_Event_Address" />
 
     <EditText
-        android:id="@+id/Edit_Event_Address"
+        android:id="@+id/Edit_Create_Event_Address"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:inputType="textPostalAddress" />
 
     <TextView
-        android:id="@+id/Text_Event_Time"
+        android:id="@+id/Text_Create_Event_Time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Create_Event_Time" />
+    <TextView
+        android:id="@+id/Text_Create_Chosen_Time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
-    <EditText
-        android:id="@+id/Edit_Event_Time"
-        android:layout_width="fill_parent"
+    <Button
+        android:id="@+id/Button_Create_Event_Time"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="time" />
+        android:text="@string/Create_Event_Change_Time_Button" />
+    
+    <TextView
+        android:id="@+id/Text_Create_Event_Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Create_Event_Date" />
+    
+    <TextView
+        android:id="@+id/Text_Create_Chosen_Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:id="@+id/Button_Create_Event_Date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Create_Event_Change_Date_Button" />
     
     <Button
-        android:id="@+id/button_picture_event_info"
+        android:id="@+id/Button_Create_Event_Picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Browse_Picture_Button" />
     
      <Button
-        android:id="@+id/button_submit_event_info"
+        android:id="@+id/Button_submit_event_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Submit_Button" />
