update without BIN

--- a/CSIS247Project/res/layout/createevent.xml
+++ b/CSIS247Project/res/layout/createevent.xml
@@ -7,7 +7,8 @@
     android:id="@+id/LinearLayout_Create_Event"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+	android:background="@drawable/bgall">
 
     <TextView
         android:id="@+id/Text_Event_Name"
