--- a/CSIS247Project/res/layout/eventlist.xml
+++ b/CSIS247Project/res/layout/eventlist.xml
@@ -2,12 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+	android:background="@drawable/bgall">
+    
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
+        android:text="@string/hello" 
+        />
     
     <ListView android:id="@+id/Events_ListView" android:layout_height="wrap_content"
 				android:layout_width="fill_parent"></ListView>
