--- a/CSIS247Project/res/layout/eventsearch.xml
+++ b/CSIS247Project/res/layout/eventsearch.xml
@@ -7,7 +7,9 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:id="@+id/LinearLayout_Event_Search" >
+    android:id="@+id/LinearLayout_Event_Search"
+    android:background="@drawable/bgall" >
+
  
     <TextView
         android:layout_width="fill_parent"
