--- a/CSIS247Project/res/menu/refreshmenu.xml
+++ b/CSIS247Project/res/menu/refreshmenu.xml
@@ -2,4 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/refresh_Events"
           android:title="@string/menu_refresh" />
+    <item android:id="@+id/prefs"
+          android:title="@string/menu_prefs"/>
 </menu>
