--- a/CSIS247Project/res/xml/prefs.xml
+++ b/CSIS247Project/res/xml/prefs.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    android:windowBackground="@drawable/bgall" >
 <ListPreference
 	android:title="@string/Prefs_Location_Frequency_Title"
 	android:summary="@string/Prefs_Location_Frequency_Summary"
 	android:key="locationUpdateFrequency"
 	android:entries="@array/locationfrequency"
 	android:entryValues="@array/locationfrequencyvalues" 
-	android:defaultValue="5">
+	android:defaultValue="5"
+	>
 </ListPreference>
 </PreferenceScreen>
