--- a/CSIS247Project/res/layout/eventlistevent.xml
+++ b/CSIS247Project/res/layout/eventlistevent.xml
@@ -2,49 +2,38 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:layout_weight="1"
+    android:orientation="vertical"
+    android:paddingLeft="5dip" >
 
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:contentDescription="@string/Image_Content_Description"
-        android:padding="10dp" />
+    <TextView
+        android:id="@+id/eventTitle"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:textSize="20dip"
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
 
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="0dip"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        android:paddingLeft="10dp" >
+        android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/eventTitle"
-            android:layout_width="fill_parent"
+            android:id="@+id/eventTime"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:textSize="16dp"
-            android:textStyle="bold" />
+            android:textSize="18dp"
+            android:textColor="@android:color/white" />
 
-        <LinearLayout
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/eventTime"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:textSize="14dp" />
-
-            <TextView
-                android:id="@+id/eventDistance"
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:textSize="14dp" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/eventDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:textSize="18dp"
+            android:textColor="@android:color/white"
+            android:layout_marginLeft="10dip" />
     </LinearLayout>
 
 </LinearLayout>
